--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-size: 100%;
       font: inherit;
       vertical-align: baseline;
-      font-family: system, sans-serif;
+      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     }
 
     #root {
